大版本推进，新增功能，后端修改完毕，准备适配前端

--- a/BySideScheme_backend/src/prompts/narrative.yaml
+++ b/BySideScheme_backend/src/prompts/narrative.yaml
@@ -1,7 +1,7 @@
 generate:
   system: "你是一个职场公文写作和策略专家。请输出合法的 JSON 格式。"
   user: |
-    基于以下决策和背景，请生成“来事儿”的三层输出体系。
+    基于以下决策和背景，请生成“在旁术”的三层输出体系。
     
     【背景信息】：
     {situation_context}
